Broken Link fixed.

--- a/camera_raw_chapter_4_2.ipynb
+++ b/camera_raw_chapter_4_2.ipynb
@@ -57,10 +57,10 @@
       "metadata": {
         "id": "R7s9rbZkqO3n",
         "colab_type": "code",
-        "outputId": "06c00d7d-3238-40c7-f7c2-c501006d835e",
+        "outputId": "9b63a6ab-26da-4bf5-8328-07a6ea8fa75b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 503
+          "height": 215
         }
       },
       "cell_type": "code",
@@ -83,7 +83,7 @@
         "\n",
         "from raw_process import simple_demosaic, white_balance, black_level_correction, gamma_correction"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,22 +94,6 @@
             "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from imageio) (1.14.6)\n",
             "Requirement already satisfied: pillow in /usr/local/lib/python3.6/dist-packages (from imageio) (4.0.0)\n",
             "Requirement already satisfied: olefile in /usr/local/lib/python3.6/dist-packages (from pillow->imageio) (0.46)\n",
-            "--2019-03-03 05:16:56--  https://github.com/moizumi99/camera_raw_processing/raw/master/raw_process.py\n",
-            "Resolving github.com (github.com)... 192.30.253.113, 192.30.253.112\n",
-            "Connecting to github.com (github.com)|192.30.253.113|:443... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://raw.githubusercontent.com/moizumi99/camera_raw_processing/master/raw_process.py [following]\n",
-            "--2019-03-03 05:16:56--  https://raw.githubusercontent.com/moizumi99/camera_raw_processing/master/raw_process.py\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 17130 (17K) [text/plain]\n",
-            "Saving to: ‘raw_process.py’\n",
-            "\n",
-            "raw_process.py      100%[===================>]  16.73K  --.-KB/s    in 0.01s   \n",
-            "\n",
-            "2019-03-03 05:16:56 (1.23 MB/s) - ‘raw_process.py’ saved [17130/17130]\n",
-            "\n",
             "Reading package lists... Done\n",
             "Building dependency tree       \n",
             "Reading state information... Done\n",
@@ -124,11 +108,7 @@
       "metadata": {
         "id": "nniQEuMMmfAx",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "6e77140a-b214-4e81-a96e-25600418cddf"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -138,16 +118,8 @@
         "# ! rm {target_dir}/*.json\n",
         "# その後Runtime->Restart Runtime選択してページ全体を再実行"
       ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "rm: cannot remove '/root/.cache/matplotlib/*.json': No such file or directory\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -172,7 +144,7 @@
       "cell_type": "code",
       "source": [
         "# 画像をダウンロードします。\n",
-        "!if [ ! -f chart.jpg ]; then wget https://raw.githubusercontent.com/moizumi99/camera_raw_process/master/chart.jpg; fi\n",
+        "!if [ ! -f chart.jpg ]; then wget https://github.com/moizumi99/camera_raw_processing/raw/master/chart.jpg; fi\n",
         "\n",
         "# 自分で撮影した画像を使用する場合は以下のコメントを取り除きアップロードします。\n",
         "# from google.colab import files\n",
@@ -250,7 +222,7 @@
       "metadata": {
         "id": "5ya9tI1RqO3y",
         "colab_type": "code",
-        "outputId": "7d195ab1-b77f-4889-805d-a2e4a13eb7b6",
+        "outputId": "c9ec2bca-cb9e-405e-fa1a-6271d08362de",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 497
@@ -265,7 +237,7 @@
         "plt.title(u\"簡易デモザイクを使ったRAW現像結果\")\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -295,10 +267,10 @@
       "metadata": {
         "id": "-lJ1rdM5qO32",
         "colab_type": "code",
-        "outputId": "5f95ca7d-d6d5-4711-a998-7e18a9a4ec83",
+        "outputId": "9ac83073-6003-4b2b-963c-cf2ea0ee4c02",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 53
         }
       },
       "cell_type": "code",
@@ -306,7 +278,7 @@
         "print(\"現像後のサイズ = \", gmm_img.shape)\n",
         "print(\"RAWデータのサイズ = \", raw_array.shape)"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -391,7 +363,7 @@
       "metadata": {
         "id": "u0pRBSkDqO4C",
         "colab_type": "code",
-        "outputId": "f9e68820-82db-43e2-80ff-17f44f169a87",
+        "outputId": "493000c0-c6a3-4d35-d94a-5be2b96331ac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 398
@@ -405,7 +377,7 @@
         "plt.title(u\"簡易RAW現像結果（左）とJPEG画像(右)\")\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -437,7 +409,7 @@
       "metadata": {
         "id": "ttYXCFXHqO4G",
         "colab_type": "code",
-        "outputId": "23c75ada-75f6-4645-fa23-3963c6fb337e",
+        "outputId": "5577381c-4e6b-4181-a183-e392e243e799",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 468
@@ -472,7 +444,7 @@
         "# 実際に表示。\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -584,17 +556,17 @@
       "metadata": {
         "id": "OW_B9ga2qO4O",
         "colab_type": "code",
-        "outputId": "4099db27-ccda-49a6-9399-53ecf788b6fd",
+        "outputId": "1dd321da-6fc5-4e10-e76f-8ce04218cd23",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         }
       },
       "cell_type": "code",
       "source": [
         "print(dms_img.shape)"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -645,7 +617,7 @@
       "metadata": {
         "id": "Ah36MmFlqO4V",
         "colab_type": "code",
-        "outputId": "bd6e62ac-afd0-4fe3-aa64-d7fd73ebe50c",
+        "outputId": "aa552b5c-8517-47e1-df73-9c724fcc9b3f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 497
@@ -660,7 +632,7 @@
         "plt.title(u\"線形補間デモザイク画像\")\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -690,7 +662,7 @@
       "metadata": {
         "id": "sei5tVpoqO4Y",
         "colab_type": "code",
-        "outputId": "75cb8cb8-5982-4a48-dbee-7705a24435a1",
+        "outputId": "3021b310-6896-492c-89bf-bdd29a4a454c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 468
@@ -720,7 +692,7 @@
         "# 実際に表示。\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -871,7 +843,7 @@
         "この`demosaic()`関数は`raw_process.py`モジュールの一部として[githubにアップロード](https://raw.githubusercontent.com/moizumi99/raw_process/master/raw_process.py)されています。\n",
         "使用する場合は、\n",
         "\n",
-        "`!wget https://raw.githubusercontent.com/moizumi99/raw_process/master/raw_process.py`\n",
+        "`!wget https://github.com/moizumi99/camera_raw_processing/raw/master/raw_process.py`\n",
         "\n",
         "としてダウンロードした後、\n",
         "\n",
