final image added.

--- a/camera_raw_chapter_2.ipynb
+++ b/camera_raw_chapter_2.ipynb
@@ -17,7 +17,6 @@
     "id": "GHjuq3o4Mit5"
    },
    "source": [
-    "## カメラ画像処理について\n",
     "### この章について"
    ]
   },
@@ -52,7 +51,19 @@
     "id": "myKIrTiSou4-"
    },
    "source": [
-    "(TODO: 追加)"
+    "デジタル方式のカメラでは単体のカメラであってもスマートフォンの一部機能としてのカメラであっても、おおよその構成はほとんどの場合このようになっています。\n",
+    "\n",
+    "![カメラの構成](https://github.com/moizumi99/camera_raw_processing/raw/master/Figures/fig4.png)\n",
+    "\n",
+    "光学系は光を集めセンサーにに結像する部分です。レンズや絞りなどからなります。フォーカスをとったり、ズームをおこなったりする機能もここにはいります。\n",
+    "\n",
+    "画像センサーは集まってきた光を電気信号に変換します。また信号の強度を増幅したり、アナログの電気信号をデジタルに変えたり、という処理もここで行われます。\n",
+    "\n",
+    "処理系ではまず電気信号として入ってきた画像データを信号処理して人間の目に見える形にする画像信号処理の部分があります。また、画像の統計情報などを元に光学系やセンサー、また画像信号処理部分を制御するカメラ制御もこの処理系にはいります。\n",
+    "\n",
+    "この３つの主要構成品がどのようなかたちで実装されているかはカメラ毎に違います。単体のカメラではこのように３つきっちりとわかれた形で作られる事が多いようですが、スマートフォンでは光学系とセンサーはセンサーモジュールという一つの部品に入っている事が多いです。また処理系が実装される部位としてはセンサーやセンサーモジュールの中であったり、スマートフォンのCPUと同じ部品の上にのっていたりします。\n",
+    "\n",
+    "また、画像信号処理をカメラ内ではごく一部分だけ行い残りの部分を外部のPCなどで行うということも良くあります。このような場合に使うのがRAW画像・RAWファイルと呼ばれるものです。"
    ]
   },
   {
