final image added to chpater 1.

--- a/camera_raw_chapter_1.ipynb
+++ b/camera_raw_chapter_1.ipynb
@@ -34,7 +34,8 @@
     "そのために、解説する処理は最重要なものにしぼり、使用するアルゴリズムは一部の例外（デモザイク）を除き、もっとも簡単なものを選びました<sup name=\"footnote1\">[1]</sup>。\n",
     "\n",
     "記事の最後ではラズベリーパイのカメラで撮影したRAW画像からこんなRGB画像が作れるようになります。\n",
-    "\n"
+    "\n",
+    "![RAW現像した画像](https://github.com/moizumi99/camera_raw_processing/raw/master/final_chart.jpg)"
    ]
   },
   {
@@ -44,7 +45,7 @@
     "id": "XCSHEbH9DWKw"
    },
    "source": [
-    "またすべての処理はGoogle Colab上で行うことができ、読者の皆さんはパワフルなPCや特殊なソフトウェアをよういせずとも、ブラウザ上で全ての処理を試してみることができます。\n",
+    "またすべての処理はGoogle Colab上で行うことができ、読者の皆さんはパワフルなPCや特殊なソフトウェアを用意せずとも、ブラウザ上で全ての処理を試してみることができます。\n",
     "  \n",
     "全てのコードへのリンクはこちらの[目次ページ](http://bit.ly/raw_toc)からたどることができます。"
    ]
@@ -183,7 +184,7 @@
     "この本で扱う画像を撮影するのに使ったカメラは以下の２つです。\n",
     "\n",
     "- Raspberry Pi Camera v2.1\n",
-    "- Sony Alpha 7 III\n",
+    "- Sony α7 III (一部のみ)\n",
     "\n",
     "なお、使用したファイルはGithubからダウンロードできるので、これらのカメラをお持ちでなくても、紹介した処理の内容を実行することは可能です。"
    ]
