A Typo is fixed.

--- a/camera_raw_chapter_3.ipynb
+++ b/camera_raw_chapter_3.ipynb
@@ -629,7 +629,7 @@
         "\n",
         "### この節について\n",
         "\n",
-        "この節では、RAWデータの簡易でモザイク処理を行い、画像をフルカラーで表示してみます。"
+        "この節では、RAWデータの簡易デモザイク処理を行い、画像をフルカラーで表示してみます。"
       ]
     },
     {
