Link fixed. Some minor text edits made.

--- a/camera_raw_chapter_6_2.ipynb
+++ b/camera_raw_chapter_6_2.ipynb
@@ -998,9 +998,9 @@
     "また、このアルゴリズムが発表されたのがすでに１３年前であり、これまでにさらにさまざまなアルゴリズムが提案されており、現在も進歩をつづけています[^3]。\n",
     "たとえば、最近の流行はデモザイク処理にディープラーニングを使う手法です[^4]。\n",
     "\n",
-    "[^3]: たとえば高機能なRAW現像ソフトウェアRawTherapeeではさまざまなアルゴリズムを実装しているようです。[https://rawpedia.rawtherapee.com/Demosaicing/jp]\n",
+    "[^3]: たとえば高機能なRAW現像ソフトウェアRawTherapeeではさまざまなアルゴリズムを実装しているようです。https://rawpedia.rawtherapee.com/Demosaicing/jp\n",
     "\n",
-    "[^4]: [https://arxiv.org/abs/1802.03769:title]\n",
+    "[^4]: https://arxiv.org/abs/1802.03769:title \n",
     "\n",
     "こういった事情を考慮にいれても、今回紹介した手法はシンプルな割には高画質の出力が得られる良いアルゴリズムだと思います。\n",
     "\n",
