Long source codes before 4.2 are fixed.

--- a/camera_raw_chapter_2.ipynb
+++ b/camera_raw_chapter_2.ipynb
@@ -7,17 +7,7 @@
     "id": "fHOf-3ifawuQ"
    },
    "source": [
-    "## 2. カメラ画像処理について"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "GHjuq3o4Mit5"
-   },
-   "source": [
-    "### この章について"
+    "# カメラ画像処理について"
    ]
   },
   {
@@ -27,11 +17,15 @@
     "id": "fAAldEyCbA4x"
    },
    "source": [
+    "## カメラ画像処理について\n",
+    "\n",
+    "### この章について\n",
+    "\n",
     "この章ではカメラのしくみやRAW画像からはじめて、カメラ画像処理やRAW現像ソフトの中でどのような処理が行われているのかを説明します。\n",
     "\n",
     "この章を含む全ての内容はColabノートブックとして公開してあります。この章のノートブックを見るには[目次ページ](http://bit.ly/raw_toc)から参照するか、以下のリンクを使ってアクセスしてください。\n",
     "\n",
-    "http://bit.ly/raw_chap_2"
+    "[http://bit.ly/raw\\_chap_2](http://bit.ly/raw_chap_2)"
    ]
   },
   {
