--- a/camera_raw_chapter_4.ipynb
+++ b/camera_raw_chapter_4.ipynb
@@ -7,7 +7,7 @@
     "id": "kJVUDw9w48sh"
    },
    "source": [
-    "#  4. 重要な処理"
+    "#  重要な処理"
    ]
   },
   {
@@ -17,15 +17,15 @@
     "id": "t8PX2KZy9ZPE"
    },
    "source": [
-    "## 4.1 この章について\n",
+    "## この章について\n",
     "\n",
     "### はじめに\n",
     "\n",
     "この章ではカメラ画像処理の中でも重要な処理を紹介します。\n",
     "\n",
-    "この章の内容はColabノートブックとして公開してあります。ノートブックを見るには[目次ページ](http://bit.ly/raw_toc)から参照するか、以下のリンクを使ってアクセスしてください。\n",
+    "この章の内容はColabノートブックとして公開してあります。ノートブックを見るには目次ページ[(http://bit.ly/raw\\_toc)](http://bit.ly/raw_toc)から参照するか、以下のリンクを使ってアクセスしてください。\n",
     "\n",
-    "http://bit.ly/raw_chap_4\n"
+    "[http://bit.ly/raw\\_chap\\_4](http://bit.ly/raw_chap_4)"
    ]
   },
   {
