--- a/camera_raw_chapter_7.ipynb
+++ b/camera_raw_chapter_7.ipynb
@@ -7,54 +7,20 @@
     "id": "4jwut-7gzs8U"
    },
    "source": [
-    "# まとめ"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "kPkuZGWjzs8V"
-   },
-   "source": [
-    "## まとめ"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "ApD4indyzs8W"
-   },
-   "source": [
-    "### はじめに\n",
-    "\n",
-    "この章は全体のまとめです。\n",
-    "\n",
-    "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには[目次ページ](http://bit.ly/raw_toc)から参照するか、以下のリンクを使ってアクセスしてください。\n",
-    "\n",
-    "http://bit.ly/raw_chap_7"
+    "# あとがき"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 本文"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "xY6r63Bczs85"
-   },
-   "source": [
-    "### まとめ\n",
+    "この本の内容は著者のブログ[「ゼロから作るRAW現像」](http://uzusayuu.hatenadiary.jp/entry/2018/11/04/141216)を再編集し、前編Colaboratoryでそのまま実行できるように書き直したものです。\n",
     "\n",
-    "おわりです。\n",
+    "ブログ掲載時には「面白い」「興味深い」といった感想がよせられたものの、一部「難しい」「わからん」という方もいらっしゃいました。この大部分は処理の内容自体よりも記事の構成や文章が拙かったのではないかと想像しています。\n",
     "\n",
-    "[付録](http://bit.ly/raw_appendix_1)があります。\n"
+    "そこで今回同人誌化するにあたっては記事の順番を大きく入れ替え、また環境構築の必用がないColaboratoryに実行環境を移すことにより、不必要なわかりにくさをできるだけ取り除くことに注力しました。うまくいっているかどうかは読者の皆さんに判断していただくしかありませんが、手にとっていただいただけでも幸いです。\n",
+    "\n",
+    "TODO:謝辞追加"
    ]
   }
  ],
