Long source codes in 4.3 - 4.5 are fixed.

--- a/camera_raw_chapter_4_2.ipynb
+++ b/camera_raw_chapter_4_2.ipynb
@@ -75,7 +75,8 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# 前節までに作成したモジュールのダウンロード\n",
-    "!if [ ! -f raw_process.py ]; then wget http://bit.ly/raw_process -O raw_process.py; fi\n",
+    "!if [ ! -f raw_process.py ]; then \\\n",
+    "    wget http://bit.ly/raw_process -O raw_process.py; fi\n",
     "\n",
     "# 日本語フォントの設定\n",
     "!apt -y install fonts-ipafont-gothic\n",
@@ -110,7 +111,7 @@
    "source": [
     "次に画像のダウンロードと読み込みを行います。\n",
     "\n",
-    "今回はラズベリーパイで撮影したこの画像を使用します。\n",
+    "今回もラズベリーパイで撮影したこの画像を使用します。\n",
     "\n",
     "![チャート画像](https://raw.githubusercontent.com/moizumi99/raw_process/master/chart.jpg)"
    ]
@@ -296,6 +297,7 @@
    "source": [
     "# matplotlibのモジュールimageを使ってJPEG画像を読み込みます。\n",
     "from matplotlib import image\n",
+    "# JPEG画像をnumpyのarrayとして取得\n",
     "jpg_img = image.imread(\"chart.jpg\")\n",
     "# 0-1の範囲で正規化します\n",
     "jpg_img = jpg_img / jpg_img.max()\n",
@@ -813,18 +815,43 @@
     "\n",
     "上記の場合は、入力画素の周辺3x3画素を取り出し、その一つ一つの画素とフィルターの値を掛け合わした上で合計し出力するという処理をしています。\n",
     "\n",
-    "例えばこのコードの場合、緑画素なら、$gin$、$gout$を緑画素の入力、出力とすると\n",
+    "例えばこのコードの場合、緑画素なら、$g_{in}$、$g_{out}$を緑画素の入力、出力とすると\n",
     "\n",
-    "$$ g =  \\frac{1}{4}\n",
+    "\\begin{equation}\n",
+    "f_{G} =  \\frac{1}{4}\n",
     "\\begin{bmatrix}\n",
     "    0 & 1 & 0 \\\\\n",
     "    1 & 4 & 1 \\\\\n",
     "    0 & 1 & 0\n",
-    "    \\end{bmatrix} $$\n",
+    "    \\end{bmatrix}\n",
+    "\\end{equation}\n",
     "\n",
-    "$$ gout_{x, y}= \\sum_{i=-1}^{+1}\\sum_{j=-1}^{+1} gin_{x+i, y+i} g_{i, j}$$\n",
+    "$$ g_{out} \\left( x, y \\right) = \\sum_{i=-1}^{+1}\\sum_{j=-1}^{+1} g_{in} \\left( x+i, y+i \\right) f_{G} \\left( i, j \\right) $$\n",
     "\n",
     "という処理を行います。これで入力画素が緑画素の場合上下左右には緑画素がないので入力画素がそのまま出力されますし、そうでない場合は上下左右の緑画素の平均値が出力されます。\n",
+    "\n",
+    "同様に赤画素なら、$r_{in}$、$r_{out}$を赤画素の入力、出力とすると\n",
+    "\n",
+    "\\begin{equation}\n",
+    "f_r =  \\frac{1}{4}\n",
+    "\\begin{bmatrix}\n",
+    "    1 & 2 & 1 \\\\\n",
+    "    2 & 4 & 2 \\\\\n",
+    "    1 & 4 & 2\n",
+    "    \\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "\n",
+    "$$ r_{out} \\left( x, y \\right) = \\sum_{i=-1}^{+1}\\sum_{j=-1}^{+1} r_{in} \\left( x+i, y+i \\right) f_r \\left( i, j \\right) $$\n",
+    "\n",
+    "という処理を行います。これで\n",
+    "\n",
+    "- 入力画素が赤画素：赤の周辺には他の赤はないので入力画素をそのまま出力\n",
+    "- 入力画素の上下が赤：上下の平均を出力。（周辺には他に赤画素はない。）\n",
+    "- 入力画素の左右が赤：左右の平均を出力。（周辺には他に赤画素はない。）\n",
+    "- 入力がその斜め上・下が赤：斜め右上・左上・右下・左下の平均を出力\n",
+    "\n",
+    "という処理が行われます。青画素も同じように処理します。\n",
+    "\n",
     "\n",
     "実行してみましょう。"
    ]
@@ -869,6 +896,8 @@
     "id": "OzTtlzjpqO4f"
    },
    "source": [
+    "同じ結果が得られました。\n",
+    "\n",
     "この`demosaic()`関数はraw\\_process.pyモジュールの一部として[githubにアップロード](https://raw.githubusercontent.com/moizumi99/raw_process/master/raw_process.py)されています。\n",
     "使用する場合は、\n",
     "\n",
