Long source codes chapter 5 are fixed.

--- a/camera_raw_chapter_4_4.ipynb
+++ b/camera_raw_chapter_4_4.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには目次ページ[(http://bit.ly/raw\\_toc)](http://bit.ly/raw_toc)から参照するか、以下のURLからアクセスしてください。\n",
     "\n",
-    "[http://bit.ly/raw\\_chap\\_4_2](http://bit.ly/raw_chap_4_4)"
+    "[http://bit.ly/raw\\_chap\\_4\\_2](http://bit.ly/raw_chap_4_4)"
    ]
   },
   {
@@ -80,7 +80,8 @@
     "    wget http://bit.ly/raw_process -O raw_process.py; fi\n",
     "\n",
     "from raw_process import simple_demosaic, white_balance, \\\n",
-    "    black_level_correction, gamma_correction, demosaic, defect_correction\n",
+    "    black_level_correction, gamma_correction, demosaic, \\\n",
+    "    defect_correction\n",
     "\n",
     "# 日本語フォントの設定\n",
     "!apt -y install fonts-ipafont-gothic\n",
