--- a/camera_raw_chapter_5.ipynb
+++ b/camera_raw_chapter_5.ipynb
@@ -7,7 +7,7 @@
     "id": "ht-4rPZWsZTl"
    },
    "source": [
-    "# 5 画質を良くする処理"
+    "# 画質を良くする処理"
    ]
   },
   {
@@ -17,16 +17,16 @@
     "id": "LxA5BCpYsZTn"
    },
    "source": [
-    "## 5.1 この章について\n",
+    "## この章について\n",
     "\n",
     "\n",
     "### はじめに\n",
     "\n",
     "この章では画像の画質を良くする処理を紹介します。\n",
     "\n",
-    "この章の内容はColabノートブックとして公開してあります。ノートブックを見るには[目次ページ](http://bit.ly/raw_toc)から参照するか、以下のリンクを使ってアクセスしてください。\n",
+    "この節のの内容はColabノートブックとして公開してあります。ノートブックを見るには目次ページ[(http://bit.ly/raw\\_toc)](http://bit.ly/raw_toc)から参照するか、以下のURLからアクセスしてください。\n",
     "\n",
-    "http://bit.ly/raw_chap_5\n"
+    "[http://bit.ly/raw\\_chap\\_5](http://bit.ly/raw_chap_5)|"
    ]
   },
   {
