--- a/camera_raw_chapter_6_3.ipynb
+++ b/camera_raw_chapter_6_3.ipynb
@@ -774,7 +774,7 @@
     "\n",
     "今回は市販のミラーレスカメラ、ソニーα7-IIIのRAW画像を現像してみました。\n",
     "\n",
-    "これで。"
+    "これで「PythonとColabで作る - RAW画像処理入門」の内容はすべて終わりです。おつかれさまでした。"
    ]
   }
  ],
