--- a/camera_raw_chapter_7.ipynb
+++ b/camera_raw_chapter_7.ipynb
@@ -14,13 +14,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "この本の内容は著者のブログ[「ゼロから作るRAW現像」](http://uzusayuu.hatenadiary.jp/entry/2018/11/04/141216)を再編集し、前編Colaboratoryでそのまま実行できるように書き直したものです。\n",
+    "この本の内容は著者のブログ[「ゼロから作るRAW現像」](http://bit.ly/raw_zero)を再編集し、全編Colaboratoryでそのまま実行できるように書き直したものです。\n",
     "\n",
-    "ブログ掲載時には「面白い」「興味深い」といった感想がよせられたものの、一部「難しい」「わからん」という方もいらっしゃいました。この大部分は処理の内容自体よりも記事の構成や文章が拙かったのではないかと想像しています。\n",
+    "ゼロから作るRAW現像:[http://bit.ly/raw_zero](http://bit.ly/raw_zero)\n",
     "\n",
-    "そこで今回同人誌化するにあたっては記事の順番を大きく入れ替え、また環境構築の必用がないColaboratoryに実行環境を移すことにより、不必要なわかりにくさをできるだけ取り除くことに注力しました。うまくいっているかどうかは読者の皆さんに判断していただくしかありませんが、手にとっていただいただけでも幸いです。\n",
+    "今回同人誌化するにあたっては記事の構成を大きく入れ替え、環境構築の必用がないColaboratoryに実行環境を移すことにより、よりいっそうわかりやすく書くことに注力しました。\n",
     "\n",
-    "TODO:謝辞追加"
+    "最後にこの場を借りてお礼の言葉を述べさせてください。まず「ゼロから作るRAW現像」にフィードバックをくださった方々に感謝したいと思います。とくに@karaage氏には熱烈な応援を頂いた上に、ブログの校閲もしていただきました。また@karaageさんが最初にColaboratoryでの実行にも成功された事にも触れないわけにはいきません。\n",
+    "\n",
+    "からあげ氏のブログ：[https://karaage.hatenadiary.jp/](https://karaage.hatenadiary.jp/)\n",
+    "\n",
+    "また、@uchan\\_nos氏には快く技術書展での委託販売を了解していただきました。@uchan\\_nos氏のご厚意がなければ、この同人誌も印刷されることはなかったと思います。ありがとうございました。\n",
+    "\n",
+    "uchan\\_nos氏のブログ：[http://uchan.hateblo.jp](http://uchan.hateblo.jp)"
    ]
   }
  ],
