--- a/camera_raw_chapter_4.ipynb
+++ b/camera_raw_chapter_4.ipynb
@@ -1,96 +1,81 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "kJVUDw9w48sh"
-   },
-   "source": [
-    "#  重要な処理"
-   ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "camera_raw_chapter_4.ipynb",
+      "version": "0.3.2",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "t8PX2KZy9ZPE"
-   },
-   "source": [
-    "## この章について\n",
-    "\n",
-    "### はじめに\n",
-    "\n",
-    "この章ではカメラ画像処理の中でも重要な処理を紹介します。\n",
-    "\n",
-    "この章の内容はColabノートブックとして公開してあります。ノートブックを見るには目次ページ[(http://bit.ly/raw\\_toc)](http://bit.ly/raw_toc)から参照するか、以下のリンクを使ってアクセスしてください。\n",
-    "\n",
-    "[http://bit.ly/raw\\_chap\\_4](http://bit.ly/raw_chap_4)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "LElOcYeecz7w"
-   },
-   "source": [
-    "### この章で扱う処理について\n",
-    "\n",
-    "前章でRAW画像に最低限の処理を行いフルRGBとして表示することができました。\n",
-    "処理が単純な割には以外のきれいな画像ができたのではないでしょうか？\n",
-    "\n",
-    "でもこれは画像を随分小さく表示しているせいで粗が目立っていないという面が大きいのです。またRAW現像やカメラ画像処理で扱う画像は常に理想的な状態で撮影されるわけではありません。撮影は室内などの暗いところで扱われることも多いですし、センサーもスマートフォン向けを始め非常に小さい物を使う事が多々あります。そういった画像データにはさまざまな理想的でない特性があり、そういったものは、各種の補正処理を行わないと最終的な画質は低品質になってしまいます。\n",
-    "\n",
-    "また、前章で扱ったデモザイクは簡易的なもので出力画像が入力画像の４分の１の大きさになるという重大な問題があります。これも解決しなくてはなりません。\n",
-    "\n",
-    "この章ではそういった通常のRAW画像を処理する上で重要な処理を紹介します。\n",
-    "\n",
-    "とりあげるのは以下の処理です。\n",
-    "- デモザイク\n",
-    "- 欠陥画素補正\n",
-    "- カラーマトリクス補正\n",
-    "- レンズシェーディング補正\n",
-    "\n",
-    "最初に扱うデモザイクでは、出力サイズが入力サイズと同じになる通常のデモザイク処理を取り上げます。\n",
-    "\n",
-    "次の欠陥画素補正では、画像センサーにはつきものの欠陥画素を修正する方法を紹介します。\n",
-    "\n",
-    "カラーマトリクス補正は色再現性を向上する処理です。\n",
-    "\n",
-    "レンズシェーディング補正は画像の周辺で明るさが低下する周辺減光・レンズシェーディングと呼ばれる現象を補正します。\n",
-    "\n",
-    "### まとめ\n",
-    "\n",
-    "この章で扱う内容について概要を説明しました。次は[線形補間デモザイク処理](http://bit.ly/raw_chap_4_2)です。"
-   ]
-  }
- ],
- "metadata": {
-  "colab": {
-   "include_colab_link": true,
-   "name": "camera_raw_chapter_4.ipynb",
-   "provenance": [],
-   "version": "0.3.2"
-  },
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.0"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 1
+  "cells": [
+    {
+      "metadata": {
+        "colab_type": "text",
+        "id": "kJVUDw9w48sh"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "#  重要な処理"
+      ]
+    },
+    {
+      "metadata": {
+        "colab_type": "text",
+        "id": "t8PX2KZy9ZPE"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## この章について\n",
+        "\n",
+        "### はじめに\n",
+        "\n",
+        "この章ではカメラ画像処理の中でも重要な処理を紹介します。\n",
+        "\n",
+        "この章の内容はColabノートブックとして公開してあります。ノートブックを見るには目次ページ[(http://bit.ly/raw\\_toc)](http://bit.ly/raw_toc)から参照するか、以下のリンクを使ってアクセスしてください。\n",
+        "\n",
+        "[http://bit.ly/raw\\_chap\\_4](http://bit.ly/raw_chap_4)"
+      ]
+    },
+    {
+      "metadata": {
+        "colab_type": "text",
+        "id": "LElOcYeecz7w"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### この章で扱う処理について\n",
+        "\n",
+        "前章でRAW画像に最低限の処理を行いフルRGBとして表示することができました。\n",
+        "処理が単純な割には以外のきれいな画像ができたのではないでしょうか？\n",
+        "\n",
+        "しかしこれは画像を随分小さく表示しているせいで粗が目立っていないという面が大きいのです。またRAW現像やカメラ画像処理で扱う画像は常に理想的な状態で撮影されるわけではありません。撮影は室内などの暗いところで扱われることも多いですし、センサーもスマートフォン向けを始め非常に小さい物を使う事が多々あります。そういった画像データにはさまざまな理想的でない特性があり、そういったものは、各種の補正処理を行わないと最終的な画質は低品質になってしまいます。\n",
+        "\n",
+        "また、前章で扱ったデモザイクは簡易的なもので出力画像が入力画像の４分の１の大きさになるという重大な問題があります。これも解決しなくてはなりません。\n",
+        "\n",
+        "この章ではそういった通常のRAW画像を処理する上で重要な処理を紹介します。\n",
+        "\n",
+        "とりあげるのは以下の処理です。\n",
+        "- デモザイク\n",
+        "- 欠陥画素補正\n",
+        "- カラーマトリクス補正\n",
+        "- レンズシェーディング補正\n",
+        "\n",
+        "最初に扱うデモザイクでは、出力サイズが入力サイズと同じになる通常のデモザイク処理を取り上げます。\n",
+        "次の欠陥画素補正では、画像センサーにはつきものの欠陥画素を修正する方法を紹介します。\n",
+        "カラーマトリクス補正は色再現性を向上する処理です。\n",
+        "レンズシェーディング補正は画像の周辺で明るさが低下する周辺減光・レンズシェーディングと呼ばれる現象を補正します。\n",
+        "\n",
+        "\n",
+        "### まとめ\n",
+        "\n",
+        "この章で扱う内容について概要を説明しました。次は[線形補間デモザイク処理](http://bit.ly/raw_chap_4_2)です。"
+      ]
+    }
+  ]
 }
